<resources>
    <string name="app_name">FitnessKit</string>
    <string name="bottom_menu_lessons">Занятия</string>
    <string name="bottom_menu_request">Заявки</string>
    <string name="bottom_menu_add_button">Добавить</string>
    <string name="bottom_menu_chat">Чат</string>
    <string name="bottom_menu_more">Еще</string>
    <string name="timeTable">Расписание</string>
    <string name="time_start">Начало</string>
    <string name="time_stop">Окончание</string>
    <string name="name_training">Тренировка</string>
    <string name="name_trainer">ФИО тренера</string>
    <string name="training_place">Место тренировки</string>
    <string name="time_training">Время</string>
    <string name="date">EEEE, dd MMMM</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>