<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/cardview"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@color/card_all_training" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.55"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/time_start"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/time_stop"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_start" />

        <TextView
            android:id="@+id/name_training"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:text="@string/name_training"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/time_start"
            app:layout_constraintStart_toEndOf="@+id/time_start"
            app:layout_constraintTop_toTopOf="@+id/time_start" />

        <ImageView
            android:id="@+id/person_pict"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/time_stop"
            app:layout_constraintStart_toEndOf="@+id/time_stop"
            app:layout_constraintTop_toTopOf="@+id/time_stop"
            app:srcCompat="@drawable/person_logo"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/name_trainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_trainer"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/time_stop"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toEndOf="@+id/person_pict"
            app:layout_constraintTop_toTopOf="@+id/time_stop" />

        <ImageView
            android:id="@+id/location_pict"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/name_trainer"
            app:layout_constraintEnd_toStartOf="@+id/text_place"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/name_trainer"
            app:srcCompat="@drawable/geolocation" />

        <TextView
            android:id="@+id/text_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/training_place"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/location_pict"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/location_pict" />

        <TextView
            android:id="@+id/time_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/time_training"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/name_training"
            app:layout_constraintTop_toTopOf="@+id/name_training"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>